# spake2

./: CMakeLists.txt  README.md  install_dependencies_local.sh
source/: CMakeLists.txt  Constants.hpp  EllipticCurve.cpp  EllipticCurve.hpp  EllipticCurveConstants.hpp  HashFunctions.cpp  HashFunctions.hpp  KeyDerivationFunctions.cpp  KeyDerivationFunctions.hpp  MessageAuthenticationCodeFunctions.cpp  MessageAuthenticationCodeFunctions.hpp  MpzMathHelpers.hpp  Spake2.cpp  Spake2.hpp  Spake2CipherSuite.cpp  Spake2CipherSuite.hpp  Spake2Constants.hpp  Spake2Version.hpp  StringHelpers.hpp  main.cpp
tests/: CMakeLists.txt  EllipticCurveTests.cpp  Spake2Tests.cpp  Spake2Tests.hpp  StringHelpersTests.cpp
